--- a/client/src/components/_common/Section/Section.module.css
+++ b/client/src/components/_common/Section/Section.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
 
-    padding: var(--global-space--section);
+    margin: var(--global-space--section);
 }
 
 /* Elements */
