--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -1,21 +1,6 @@
-.root {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 40px 0 20px;
-}
-
 .container {
-    /* As a flex item */
-    flex-grow: 1;
-
-    /* As a flex container */
     display: flex;
     flex-direction: row;
-
-    /* Allow children to `overflow: scroll` but match height of this parent */
-    overflow: auto;
-
-    border-top: 1px solid #707070;
 }
 /* Make right-most item fill up remaining horizontal space */
 .container > :last-child {
@@ -39,14 +24,6 @@
     Components
 */
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.75rem;
-
-    .header-text {
-        font-size: 1.25rem;
-    }
-
     button {
         padding: 0;
         font-size: 0.78em;
@@ -60,7 +37,7 @@
     /* FP-404: All Portal section sidebars should use this value. */
     --min-width: 200px;
 
-    margin-left: -20px;
+    margin-left: calc(var(--global-space--section-left) * -1);
     border-right: 1px solid rgba(112, 112, 112, 0.25);
 
     padding-top: var(--vertical-buffer);
