--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -1,16 +1,5 @@
-.container {
-  display: flex;
-  flex-direction: column;
-
-  padding: 20px 40px 0 20px;
-}
-
 /* Children */
 .items {
-  /* As a flex item */
-  flex-grow: 1;
-
-  /* As a flex container */
   display: flex;
   flex-direction: row;
 }
@@ -18,31 +7,12 @@
 .items > :last-child {
   flex-grow: 1;
 }
-.header {
-  border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--dark);
-  /* FAQ: Design is inconsistent, but most of the time uses `10.5px` */
-  padding-bottom: 0.75rem; /* ~10px * design * 1.2 design-to-app ratio */
-
-  display: flex;
-  flex-wrap: wrap; /* prevent breadcrumbs and action buttons from colliding */
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-/* Children (of `header`) */
-.header-title {
-  font-size: 18px; /* 15px design * 1.2 design-to-app ratio */
-}
 
 /* Children (of `items`) */
 .sidebar {
-  /* FP-404: All Portal section sidebars should use this value. */
-  --min-width: 200px;
-
-  width: var(--min-width);
   padding-top: 10px;
 
-  border-right: var(--global-border--normal);
+  border-right: 1px solid rgba(112, 112, 112, 0.25);
 }
 .content {
   display: flex;
