--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -13,59 +13,35 @@
 /*
     Components
 */
-.btn-link {
-    color: #9d85ef;
-    padding-left: 0;
-}
-#allocations-wrapper {
-    display: flex;
-    flex-direction: column;
-
-    padding-right: 32px;
-}
-#allocations-container {
-    /* As a flex item */
-    flex-grow: 1;
-
-    /* As a flex container */
+.allocations-container {
     display: flex;
     flex-direction: row;
-
-    /* Allow children to `overflow: scroll` but match height of this parent */
-    overflow: auto;
-
-    border-top: 1px solid #707070;
 }
 /* Make right-most item fill up remaining horizontal space */
-#allocations-container > :last-child {
+.allocations-container > :last-child {
     flex-grow: 1;
 }
 
-#allocations-header {
-    @include alloc-button();
-    display: flex;
-    justify-content: space-between;
-    margin: 21px 0 0.5rem 1.75rem;
-    padding-left: 0.2em;
-    #header-text {
-        font-size: 1.25rem;
-        font-weight: 400;
-        vertical-align: text-bottom;
-        letter-spacing: 0;
-        width: 10rem;
-        display: flex;
-        align-items: flex-end;
-        a {
-            color: #484848;
-        }
+.allocations-header {
+    @include alloc-button;
+
+    a {
+        color: #484848;
     }
 }
-#allocations-sidebar {
-    width: 215px;
-    border-right: 1px solid rgba(112, 112, 112, 0.25);
-    font-family: Roboto, sans-serif;
+.allocations-sidebar {
+    --horizontal-buffer: var(--global-space--section-left);
+    /* FAQ: Design is inconsistent across sections, but averages about `10.5px` */
+    --vertical-buffer: 0.75rem; /* ~12px (avg. 10.5px design * 1.2 design-to-app ratio */
 
-    /* !!!: This link is `40px`, which is taller than other sidebar links (which are ~`35px`) */
+    /* FP-404: All Portal section sidebars should use this value. */
+    --min-width: 200px;
+
+    margin-left: calc(var(--horizontal-buffer) * -1);
+    border-right: 1px solid rgba(112, 112, 112, 0.25);
+
+    padding-top: var(--vertical-buffer);
+
     .nav-link {
         /* NOTE: These styles match `.nav-content`. That class is not used in
                  the markup for this sidebar because it is extraneous */
@@ -73,18 +49,15 @@
         display: flex;
         align-items: center;
 
-        color: #707070;
-        padding-left: 1.5em; /* ~20px design * 1.2 design-to-app ratio (rounded) */
+        min-width: var(--min-width);
 
-        .link-icon {
-            font-size: 1.125rem; /* ~18px (16px design * 1.2 design-to-app ratio) (rounded) */
-            width: 1em;
-        }
+        color: #707070;
+        padding-left: var(--horizontal-buffer);
+
         .link-text {
             font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
             font-weight: 500;
             padding-left: 16px;
-            vertical-align: middle;
         }
     }
     .active {
@@ -123,10 +96,6 @@
         font-size: 12px;
     }
 }
-/* !!!: Where is this ID assigned? If nit's moot, delete this style */
-#pending {
-    @extend .allocations-table;
-}
 /* HACK: `FiniteScrollTable` applies `InfiniteScrollTable` in non-modular way
          (shared styles should be on HTML tables, which we do not have yet) */
 /* HACK: The excess specifity of selectors allows us to place these rulesets
@@ -148,6 +117,6 @@ table.FiniteScrollTable .sub-table-row {
 }
 /* HACK: The loading icon should not need height set, but it fixes Safari here */
 /* FP-426: Do not use `height: 100%` or isolate usage pending solution to bigger problem */
-#allocations-wrapper .loading-icon {
+.allocations-wrapper .loading-icon {
     height: auto;
 }
