--- a/client/src/components/_common/Section/Section.module.css
+++ b/client/src/components/_common/Section/Section.module.css
@@ -32,14 +32,14 @@
     margin-bottom: 0;
 }
 /* Header text is always first */
-.header > *:first-child {
+.header > *:nth-child(1) {
     font-size: 1.125rem; /* ~18px (16px design * 1.2 design-to-app ratio) (rounded) */
 
     /* FAQ: It is simpler to do this in CSS than in JavaScript */
     text-transform: capitalize;
 }
-/* Header actions are always last */
-.header > *:last-child {
+/* Header actions are always second */
+.header > *:nth-child(2) {
     height: 100%; /* (gently) force oversized elements to fit */
 }
 
