--- a/client/src/components/Applications/AppLayout/AppLayout.scss
+++ b/client/src/components/Applications/AppLayout/AppLayout.scss
@@ -8,6 +8,7 @@
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 1.4rem;
     overflow-y: auto;
 }
