Task/fp 621  fp 662 common section component (#216)
* FP-662: Create _common/Section component

* FP-662: Prep for sidebar

* Quick: Normalize font weight for all headings

* Quick: Use `PropTypes.node` directly

* FP-662: Use `Section` for `History`

* Quick: Comment: Sidebar color not using variable

* FP-662: Use `Section` for `DataFiles`

* FP-662: Use `Section` for `Allocations`

* FP-662: Use `Section` for `Applications`

* Quick: Remove useless InfiniteScrollTable CSS prop

* Quick: o-fixed-header-table RFE (easier solution)

* Quick: Center align `apps-placeholder` text

* FP-662: Ensure sections shrink & stretch properly

* FP-662: Use `Section` for `Dashboard`

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -5,6 +5,7 @@
 @import url('./settings/color.css');
 @import url('./settings/font.css');
 @import url('./settings/border.css');
+@import url('./settings/space.css');
 
 /* TOOLS */
 /* … */
@@ -13,6 +14,7 @@
 @import url('./generics/roots.css');
 
 /* ELEMENTS */
+@import url('./elements/sectioning.css');
 @import url('./elements/text-semantics.css');
 
 /* OBJECTS */
