--- a/client/src/components/Applications/AppLayout/AppLayout.scss
+++ b/client/src/components/Applications/AppLayout/AppLayout.scss
@@ -1,24 +1,14 @@
-#apps-wrapper {
+.apps-content {
     display: flex;
     flex-direction: column;
-
-    padding: 20px 40px 0 20px;
 }
-
-.apps-header {
-    border-bottom: 1px solid #707070;
-}
-
-.apps-header h5 {
-    font-weight: 400;
-}
-
 .apps-placeholder {
     display: flex;
     height: 100%; /* Be consistent with `#appDetail-wrapper`/`.appDetail-error` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 1.4rem;
     overflow-y: auto;
 }
