--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -1,21 +1,6 @@
-.root {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 40px 0 20px;
-}
-
 .container {
-    /* As a flex item */
-    flex-grow: 1;
-
-    /* As a flex container */
     display: flex;
     flex-direction: row;
-
-    /* Allow children to `overflow: scroll` but match height of this parent */
-    overflow: auto;
-
-    border-top: 1px solid #707070;
 }
 /* Make right-most item fill up remaining horizontal space */
 .container > :last-child {
@@ -39,14 +24,6 @@
     Components
 */
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.75rem;
-
-    .header-text {
-        font-size: 1.25rem;
-    }
-
     button {
         padding: 0;
         font-size: 0.78em;
@@ -54,13 +31,14 @@
     }
 }
 .sidebar {
+    --horizontal-buffer: var(--global-space--section-left);
     /* FAQ: Design is inconsistent across sections, but averages about `10.5px` */
     --vertical-buffer: 0.75rem; /* ~12px (avg. 10.5px design * 1.2 design-to-app ratio */
 
     /* FP-404: All Portal section sidebars should use this value. */
     --min-width: 200px;
 
-    margin-left: -20px;
+    margin-left: calc(var(--horizontal-buffer) * -1);
     border-right: 1px solid rgba(112, 112, 112, 0.25);
 
     padding-top: var(--vertical-buffer);
@@ -69,12 +47,8 @@
         min-width: var(--min-width);
 
         color: #707070;
-        padding-left: 1.5em; /* ~20px design * 1.2 design-to-app ratio (rounded) */
+        padding-left: var(--horizontal-buffer);
 
-        .link-icon {
-            font-size: 1.2em; /* ~20px (16px design * 1.2 design-to-app ratio) */
-            width: 1em;       /* TODO: delete this after Cortal icon replaces font awesome */
-        }
         .link-text {
             font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
             font-weight: 500;
