--- a/client/src/components/UIPatterns/UIPatterns.module.scss
+++ b/client/src/components/UIPatterns/UIPatterns.module.scss
@@ -1,30 +1,12 @@
-/* This is a version of the Dashboard stylesheet with these changes:
-    - CSS Modules
-    - minimal
-    - no flexbox
-*/
-
-.container {
-  // FAQ: Extra padding is added to bottom only for this section
-  padding: 20px 40px 40px 25px;
-
-  overflow: auto;
-}
-
-.header {
-  border-bottom: 1px solid #707070;
-}
-
-.header h5 {
-  font-weight: 400;
-}
-
 /* FAQ: Ancestor of `.dashboard-items` */
 /* RFC: Class name `.dashboard-item` (to coincide with `.dashboard-items`) */
-.grid-item {
-  margin-top: 20px;
+.container {
+  /* … */
 }
-
-.items {
+.container dt > small {
+  display: block;
+}
+.list-item {
   font-size: 14px;
+  margin-top: 20px;
 }
