--- a/client/src/components/_common/Section/Section.module.css
+++ b/client/src/components/_common/Section/Section.module.css
@@ -11,53 +11,14 @@
 
 /* Elements */
 
-.message-list > * {
-    margin: 20px 20px 0 20px;
+.messages {
+    /* … */
 }
-
 .header {
     /* As flex item */
     flex-shrink: 0;
-
-    /* As flex container */
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-
-    flex-wrap: wrap; /* prevent text and actions from colliding */
-    align-content: flex-end; /* preserve alignment of items when wrapped */
-
-    height: 32px;
-    box-sizing: content-box;
-    padding: 1.5rem 0 0.75rem 0; /* 24px, 12px (20px, 10px design * 1.2 design-to-app ratio) (rounded) */
-    border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--normal);
 }
-/* HACK: Only necessary until we have a `SectionHeader` */
-/* Do not let user bring in vertical margin (example: h1–h6) */
-.header > * {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-/* Header text is always first */
-.header > *:nth-child(1) {
-    font-size: 1.125rem; /* ~18px (16px design * 1.2 design-to-app ratio) (rounded) */
-
-    /* FAQ: It is simpler to do this in CSS than in JavaScript */
-    text-transform: capitalize;
-}
-/* Header actions are always second */
-.header > *:nth-child(2) {
-    max-height: 100%; /* (gently) force oversized elements to fit */
-}
-
 .content {
     /* As flex item */
     flex-grow: 1;
-}
-
-
-/* Modifiers */
-
-.root.should-scroll .content {
-    overflow: auto;
 }
