FP-385: Fix shouldScroll support for SectionContent

--- a/client/src/components/_common/SectionContent/SectionContent.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.module.css
@@ -7,8 +7,8 @@
 
 /* Modifiers */
 
-.should-scroll {
-  overflow: auto;
+.root:not(.should-scroll) {
+  overflow: hidden;
 }
 
 .should-debug::before          { background-color: tomato; }
