FP-385: New fixed header (only Dashboard, so far)

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -2,18 +2,6 @@
     /* HELP: How to assign this spacing when Quick Links is added? */
     padding-top: var(--global-space--section-left); /* deviated from design to use a similar global spacing */
 }
-
-/* RFC: Implement `max-height: …` in a modular manner */
-/* SEE: https://tacc-team.slack.com/archives/GQW4Q8HLG/p1578514280032300?thread_ts=1578511498.030900&cid=GQW4Q8HLG */
-/* TODO: re-work this container and table to properly lay-out and contain elements within this
-         wrapper's height and width */
-.jobs-wrapper > div {
-    max-height: 40vh;
-}
-.tickets-wrapper > div {
-    max-height: 27vh;
-}
-
-.sysmon-wrapper {
-    font-size: 14px;
+.dashboard-items > * > div {
+  border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--dark);
 }
