--- a/client/src/styles/objects/o-fixed-header-table.css
+++ b/client/src/styles/objects/o-fixed-header-table.css
@@ -1,5 +1,6 @@
 /*
 Fixed Header Table
+
 A table with a header that does not move, and a body that scrolls.
 > __Warning__: This forces table to become a fixed layout, and requires manually-calculated column widths
 
@@ -20,30 +21,11 @@ Markup:
       </tr>
     </thead>
 </table>
+
 Styleguide Objects.FixedHeaderTable
 */
-/* RFE: Do not change `display` values for table markup */
 /* SEE: https://css-tricks.com/position-sticky-and-table-headers/ */
-.o-fixed-header-table {
-  /* NOTE: Should these styles move to `elements/table.css` for all `table`s? */
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-/* Make table rows act like table rows, even though `tbody` has become a block */
-.o-fixed-header-table__row {
-  display: flex;
-  flex-direction: row;
-}
-
-.o-fixed-header-table__row td {
-  align-content: center;
-}
-
-/* Allow table body to scroll (which also pins the table head in place) */
-.o-fixed-header-table__body {
-  display: block;
-  overflow-y: auto;
-  width: 100%;
-  max-height: inherit; /* inherit max-height from InfiniteScrollTable */
+.o-fixed-header-table th {
+  position: sticky;
+  top: 0;
 }
