--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -5,14 +5,15 @@
 
   position: relative;
   width: 100%;
-  border-bottom: 1px solid #707070;
   max-height: inherit; /* inherit max-height from parent wrapper */
   font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
+
+  border-collapse: separate;
+  border-spacing: 0;
 
   thead {
     user-select: none;
     color: #707070;
-    border-bottom: 1px solid #707070;
 
     .-sort-asc,
     .sort-desc {
@@ -23,11 +24,14 @@
     th {
       padding-left: var(--cell-horizontal-padding);
       padding-right: var(--cell-horizontal-padding);
+
+      border-bottom: 1px solid #707070;
+      background-color: var(--global-color-background--app);
     }
   }
 
   tbody {
-    tr:not([class=-status]) {
+    tr:not([class=-status]) td {
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
 
@@ -39,10 +43,10 @@
     }
 
     td {
-      display: flex;
-      align-content: center;
+      vertical-align: middle;
       padding: 0.7em var(--cell-horizontal-padding);
       margin: auto 0; /* vertically center span content */
+
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -55,27 +59,18 @@
     }
 
     .-status {
-      width: 100%;
-      display: block;
       box-sizing: border-box;
       td {
-        /* FAQ: Because widths can be defined by component that uses this one,
-                and those width might not use a class, we must overwrite it */
-        width: 100% !important /* override allowed `td:nth-child(N)` width */;
-
         padding-top: 0.5em;
         padding-bottom: 0.5em;
         text-align: justify;
-        display: block;
-        box-sizing: border-box;
-        clear: both;
       }
     }
     .-status__message {
       text-align: center;
     }
   }
-  /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
+  /* Allow cell width to propogate to common inline elements */
   /* Allow `.u-ellipsis` usage to have effect on common inline elements */
   & td > a,
   & td > span {
