FP-385: S.Content oneRow layout + scroll fixes

--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -3,6 +3,9 @@
 */
 .manage-account-content {
   width: 100%;
+
+  /* Hide the scrolling caused by overfow likely from bootstrap container/row/column margin/padding games */
+  overflow-x: hidden;
 }
 .user-profile {
   @media (min-width: 992px) {
