--- a/client/src/components/_common/SectionContent/SectionContent.layouts.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.layouts.module.css
@@ -1,3 +1,16 @@
+/* 1 Row */
+
+/* TODO: Duplicate this as '.sidebar-and-content' */
+.one-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+
+
+
+
 /* 1 Column */
 
 .one-column {
