--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -1,13 +1,3 @@
-/* Children */
-.items {
-  display: flex;
-  flex-direction: row;
-}
-/* Make right-most item fill up remaining horizontal space */
-.items > :last-child {
-  flex-grow: 1;
-}
-
 /* Children (of `items`) */
 .sidebar {
   padding-top: 10px;
@@ -15,8 +5,12 @@
   border-right: 1px solid rgba(112, 112, 112, 0.25);
 }
 .content {
+  /* As a flex container */
   display: flex;
   flex-direction: column;
+
+  /* As a flex child */
+  flex-grow: 1;
 
   padding-top: 20px;
   padding-left: 20px;
