--- a/client/src/components/_common/SectionTable/SectionTable.module.css
+++ b/client/src/components/_common/SectionTable/SectionTable.module.css
@@ -11,7 +11,6 @@
   flex-grow: 1;
 
   position: relative;
-  overflow: auto;
 }
 .table-wrap > table {
   position: absolute;
@@ -29,6 +28,15 @@
 
 /* Modifiers */
 
+/* NOTE: Similar on: SectionContent, SectionTable */
+.should-scroll .table-wrap {
+  /* We want to permit vertical scrolling, without forcing it */
+  /* FAQ: Did not set `overflow: auto`, because that would certainly hide negative-margined sidebar links */
+  /* CAVEAT: Setting `overflow-y` still hides the negative-margined sidebar links because `overflow-x: visible` (default) is re-intepreted as `auto` */
+  /* SEE: https://stackoverflow.com/a/6433475/11817077 */
+  overflow-y: auto;
+}
 .root:not(.should-scroll) .table-wrap {
+  /* We want to disable vertical and horizontal scrolling */
   overflow: hidden;
 }
