--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -41,7 +41,7 @@
     /* As a flex child */
     flex-grow: 1;
 
-    /* Mimicked on: History, Allocations */
+    /* NOTE: Mimicked on: History, Allocations, DataFiles */
     padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
     padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 }
