--- a/client/src/components/_common/SectionContent/SectionContent.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.module.css
@@ -7,6 +7,7 @@
 
 /* Modifiers */
 
+/* NOTE: Similar on: SectionContent, SectionTable */
 .should-scroll {
   /* We want to permit vertical scrolling, without forcing it */
   /* FAQ: Did not set `overflow: auto`, because that would certainly hide negative-margined sidebar links */
