--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -3,7 +3,6 @@
 */
 .manage-account-wrapper {
   display: flex;
-  padding: 0;
   .container-fluid {
     padding: 20px 40px 0 25px !important; /* overwrite Bootstrap */ /* NOTE: The `!important` may not be necessary */
     display: flex;
@@ -37,9 +36,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0;
-  min-height: 2rem;
   border-bottom: 1px solid #707070;
+  margin-left: -15px !important;
+  margin-right: -15px !important;
   h5 {
     font-weight: 400;
     color: #484848;
