--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -133,9 +133,9 @@
   border-radius: 0;
   font: bold 12px Roboto, sans-serif;
   padding: 0.5rem 1rem;
-  border: 0 !important; /* override `.workbench-content .btn-secondary` */;
-  background-color: #9d85ef !important; /* override `.workbench-content .btn-secondary` */;
-  color: white !important; /* override `.workbench-content .btn-secondary` */;
+  border: 0 !important; /* override `.workbench-content .btn-secondary` */
+  background-color: #9d85ef !important; /* override `.workbench-content .btn-secondary` */
+  color: white !important; /* override `.workbench-content .btn-secondary` */
 }
 
 .form-button {
