--- a/server/portal/templates/includes/footer.html
+++ b/server/portal/templates/includes/footer.html
@@ -1,6 +1,3 @@
-{% load static cms_tags %}
+{% load static %}
 <footer class="container-fluid">
-  {% static_placeholder 'site_footer' site or %}
-
-  {% endstatic_placeholder %}
 </footer>
