--- a/server/portal/apps/onboarding/templates/portal/apps/onboarding/admin.html
+++ b/server/portal/apps/onboarding/templates/portal/apps/onboarding/admin.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load sekizai_tags staticfiles %}
+{% load staticfiles %}
 {% block title %} Account Administration {% endblock %}
 {% block content %}
 <onboarding-admin-view></onboarding-admin-view>
