--- a/server/portal/apps/onboarding/templates/portal/apps/onboarding/setup.html
+++ b/server/portal/apps/onboarding/templates/portal/apps/onboarding/setup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load sekizai_tags staticfiles %}
+{% load staticfiles %}
 {% block title %} Account Setup {% endblock %}
 {% block content %}
 <div style="padding-left: 1em;">
