--- a/server/portal/templates/includes/cms_menu.html
+++ b/server/portal/templates/includes/cms_menu.html
@@ -1,4 +1,4 @@
-{% load i18n menu_tags cache %}
+{% load i18n cache %}
 {% for child in children %}
 <li class="nav-item {% if child.ancestor or child.selected or request.get_full_path == child.url %}active{% endif %} {% if child.children %}dropdown{% endif %} {{child.attr.class}}">
   {% if child.children %}
