--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,4 +1,4 @@
-{% load menu_tags cms_tags staticfiles %}
+{% load staticfiles %}
 
 {% comment %}
 Unused Settings
@@ -36,7 +36,7 @@ They seem useful, and would be re-incoprorated when their usage is necessary.
   </button>
   <!-- Navbar Links -->
   <div class="collapse navbar-collapse" id="navbarsExpandTarget">
-    <ul class="s-cms-nav  navbar-nav" id="cms-nav-pages" data-cms-nav-endpoint="/cms/nav/pages/markup/">
+    <ul class="navbar-nav" id="cms-nav-pages" data-cms-nav-endpoint="/cms/nav/pages/markup/">
       <!-- All top-level CMS controlled nav elements handled here. -->
     </ul>
 
