change default blue links in licence modal to purple

--- a/server/portal/apps/licenses/templates/portal/apps/licenses/matlab_details.html
+++ b/server/portal/apps/licenses/templates/portal/apps/licenses/matlab_details.html
@@ -1,5 +1,5 @@
 <p>
-    <a href="http://www.mathworks.com/" target="_blank">Mathworks' MATLAB <i class="fas fa-external-link-alt"></i></a>
+    <a class="btn-link" href="http://www.mathworks.com/" target="_blank">Mathworks' MATLAB <i class="fas fa-external-link-alt"></i></a>
     is available to Academic users in the Portal Applications Workspace but requires activation.
 </p>
 <p>
