Styles for pill

--- a/client/src/styles/settings/color.css
+++ b/client/src/styles/settings/color.css
@@ -21,6 +21,6 @@
         --global-color-accent--x-light: #D2CCE7;
     --global-color-success--normal: #43D130;
         --global-color-success--alt: #C7CE1D;
-    --global-color-warning--normal: #9D85EF;
+    --global-color-warning--normal: #DBE31D;
     --global-color-danger--normal: #EB6E6E;
 }
