FP-722: Use `root` class (like other CSS modules)
History:
1. It's about 50/50 `container`/`root`, due to Sal and I disagreeing.
2. Both of us adopting the others choice as compromise.
3. So there were 2 standards, but Sal used the word `root` in his demo.

--- a/client/src/components/_common/Pill/Pill.module.scss
+++ b/client/src/components/_common/Pill/Pill.module.scss
@@ -1,5 +1,5 @@
 /* TODO: Consider sharing code between (History)Badge and Pill */
-.pill {
+.root {
   font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
   font-weight: 500;
   padding: 0.2em 0.5em; /* aim for ~23px height (19px design * 1.2 design-to-app ratio) */
