--- a/client/src/components/Onboarding/OnboardingUser.scss
+++ b/client/src/components/Onboarding/OnboardingUser.scss
@@ -14,6 +14,14 @@
   margin-bottom: 1em;
 }
 
+
+.onboarding-status__actions {
+  .loading-icon {
+    display: inline-block;
+    width: inherit;
+  }  
+}
+
 .onboarding__container {
   width: 75%;
 }
